[project]
name = "qwen3-tts"
description = "A ComfyUI custom node suite for Qwen3-TTS, supporting 1.7B and 0.6B models, Custom Voice, Voice Design, Voice Cloning and Fine-Tuning. "
version = "1.0.0"
license = {file = "LICENSE"} 
# classifiers = [
#     # For OS-independent nodes (works on all operating systems)
#     "Operating System :: OS Independent",
#
#     # OR for OS-specific nodes, specify the supported systems:
#     "Operating System :: Microsoft :: Windows",  # Windows specific
#     "Operating System :: POSIX :: Linux",  # Linux specific
#     "Operating System :: MacOS",  # macOS specific
#
#     # GPU Accelerator support. Pick the ones that are supported by your extension.
#     "Environment :: GPU :: NVIDIA CUDA",    # NVIDIA CUDA support
#     "Environment :: GPU :: AMD ROCm",       # AMD ROCm support
#     "Environment :: GPU :: Intel Arc",      # Intel Arc support
#     "Environment :: NPU :: Huawei Ascend",  # Huawei Ascend support
#     "Environment :: GPU :: Apple Metal",    # Apple Metal support
# ]

dependencies = ["qwen-tts", "modelscope", "soundfile", "numpy", "torch", "transformers", "accelerate", "librosa", "tensorboard"]

[project.urls]
Repository = "https://github.com/DarioFT/ComfyUI-Qwen3-TTS"
#  Used by Comfy Registry https://registry.comfy.org
Documentation = "https://github.com/DarioFT/ComfyUI-Qwen3-TTS/wiki"
"Bug Tracker" = "https://github.com/DarioFT/ComfyUI-Qwen3-TTS/issues"

[tool.comfy]
PublisherId = "darioft"
DisplayName = "ComfyUI-Qwen3-TTS"
Icon = ""
includes = [] 
# "requires-comfyui" = ">=1.0.0"  # ComfyUI version compatibility

