[project]
name = "comfyui-qwen3-tts"
description = "A ComfyUI custom node suite for Qwen3-TTS, supporting 1.7B and 0.6B models, Custom Voice, Voice Design, Voice Cloning and Fine-Tuning. "
version = "1.7.0"
license = { text = "Apache-2.0" } 

dependencies = ["qwen-tts", "modelscope", "soundfile", "numpy", "torch", "transformers", "accelerate", "librosa", "tensorboard"]

[project.urls]
Repository = "https://github.com/DarioFT/ComfyUI-Qwen3-TTS"
#  Used by Comfy Registry https://registry.comfy.org
Documentation = "https://github.com/DarioFT/ComfyUI-Qwen3-TTS/wiki"
"Bug Tracker" = "https://github.com/DarioFT/ComfyUI-Qwen3-TTS/issues"

[tool.comfy]
PublisherId = "darioft"
DisplayName = "ComfyUI-Qwen3-TTS"

